PYR-125 fix h1 align and images-missing

--- a/src/components/css/UploadBotForm.css
+++ b/src/components/css/UploadBotForm.css
@@ -8,6 +8,6 @@
     text-align: left;
 }
 
-h1{
+.form_upload_bot_pyrobot h1{
     text-align: left;
 }
